# BAnalysis

./: README.md
ALEDAPP/Analysis/FinalAnalysis/: FinalAnalysis  Makefile  README_FINALANALYSIS
ALEDAPP/Analysis/FormAnalysis/: FormAnalysis  Makefile
ALEDAPP/Analysis/KeyboardTestAnalysis/: KeyboardAnalysis  Makefile  README_KEYBOARDANALYSIS
ALEDAPP/Analysis/LauncherAnalysis/: LauncherAnalysis  LauncherAnalysis.cpp  README_LAUNCHERANALYSIS  makefile
ALEDAPP/Analysis/PatientFileAnalysis/: PatientFileAnalysis  README_PATIENTFILE
ALEDAPP/Analysis/WebcamAnalysis/EyesBlinking/: CMakeLists.txt  EyesBlinking.cpp  READMEEYESBLINKING.txt  makefile
ALEDAPP/EmittedData/: README_EMITTEDDATA
ALEDAPP/ReceivedData/Patient12/: Patient12KT.txt
ALEDAPP/ReceivedData/Patient20/: Patient20F.txt
ALEDAPP/Test/Patient10/: Patient10F.txt
ALEDAPP/Test/Patient101/: Patient101F.txt  Patient101KT.txt
ALEDAPP/Test/Patient150/: Patient150F.txt  Patient150KT.txt
ALEDAPP/Test/Patient176/: Patient176F.txt  Patient176KT.txt
ALEDAPP/Test/Patient2/: Patient2MT.txt
ALEDAPP/Test/Patient20/: Patient20F.txt  Patient20KT.txt
ALEDAPP/Test/Patient200/: Patient200F.txt
ALEDAPP/Test/Patient222/: Patient222F.txt  Patient222KT.txt
ALEDAPP/Test/Patient229/: Patient229F.txt  Patient229KT.txt
ALEDAPP/Test/Patient30/: Patient30F.txt  Patient30KT.txt  Patient30MT.txt
MouseTestAnalysis/: Makefile  MouseTestAnalysis  README_MOUSETEST
MouseTestAnalysis/src/: Date.h
PatientFileAnalysis/: Makefile  PatientFileAnalysis
PatientFileAnalysis/src/: PatientFileAnalysis.cpp  api.cpp  auth.cpp
(+59 files in other folders)
